# axum-bp

./: Cargo.toml  README.md
migrations/: 20231126211759_create_user_table.sql
src/: main.rs  router.rs
src/database/: connection.rs  utils.rs
