[package]
name = "axum-bp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"]}
axum = "0.6.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
uuid = {version = "1", features = ["v4","fast-rng",]}
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"]}
dotenv = "0.15.0"
chrono = "0.4.26"
strum = "0.25.0"
strum_macros = "0.24.3"
log = "0.4"
env_logger = "0.9"
reqwest = "0.11.18"
sailfish = "0.8.0"
